News UAT/force-app/main/default/objects/Order__c/Order__c.object-meta.xml
<CustomObject>
    <description>Orders related to sales order</description>
    <label>Campaign Order</label>
    <nameField>
        <displayFormat>CO-{00000}</displayFormat>
        <label>Campaign Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>