News UAT/force-app/main/default/objects/Order__c/fields/Accept_Retraction_Change__c.field-meta.xml
<CustomField>
    <fullName>Accept_Retraction_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if the campaign manager has accepted the change from SO retraction</description>
    <inlineHelpText>Indicate if the campaign manager has accepted the change from SO retraction</inlineHelpText>
    <label>Accept Retraction Change</label>
    <type>Checkbox</type>
</CustomField>