News UAT/force-app/main/default/objects/Order__c/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <formula>Account__r.Owner.FirstName &amp; &#39; &#39; &amp; Account__r.Owner.LastName</formula>
    <label>Account Manager</label>
    <type>Text</type>
</CustomField>