News UAT/force-app/main/default/objects/Order__c/fields/Account_Manager_Phone__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Phone__c</fullName>
    <formula>Account__r.Owner.Phone</formula>
    <label>Account Manager Phone</label>
    <type>Text</type>
</CustomField>