News UAT/force-app/main/default/objects/Order__c/fields/Actual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Date__c</fullName>
    <description>We may need to change this field to formula field later on to reflect the actual date when Campaign is live.</description>
    <label>Actual Start Date</label>
    <type>Date</type>
</CustomField>