News UAT/force-app/main/default/objects/Order__c/fields/Actual_Start_Date_Plus_1_Month__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Date_Plus_1_Month__c</fullName>
    <formula>Actual_Start_Date__c + 30</formula>
    <label>Actual Start Date Plus 1 Month</label>
    <type>Date</type>
</CustomField>