News UAT/force-app/main/default/objects/Order__c/fields/Actual_Start_Date_Plus_1_Week__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Date_Plus_1_Week__c</fullName>
    <formula>Actual_Start_Date__c + 7</formula>
    <label>Actual Start Date Plus 1 Week</label>
    <type>Date</type>
</CustomField>