News UAT/force-app/main/default/objects/Order__c/fields/All_Products_Ready_To_Be_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>All_Products_Ready_To_Be_Reviewed__c</fullName>
    <formula>Number_Of_Products_Ready_To_Be_Reviewed__c = Total_Number_Of_Products_To_Be_Reviewed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Products Ready To Be Reviewed</label>
    <type>Checkbox</type>
</CustomField>