News UAT/force-app/main/default/objects/Order__c/fields/Assigned_Campaign_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Campaign_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Campaign Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>