News UAT/force-app/main/default/objects/Order__c/fields/Assigned_Campaign_Manager_For_QA__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Campaign_Manager_For_QA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Campaign Manager For QA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>