News UAT/force-app/main/default/objects/Order__c/fields/Assigned_Campaign_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Campaign_Manager_Name__c</fullName>
    <formula>Assigned_Campaign_Manager_For_QA__r.FirstName &amp; &quot; &quot; &amp; Assigned_Campaign_Manager_For_QA__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Campaign Manager Name</label>
    <type>Text</type>
</CustomField>