News UAT/force-app/main/default/objects/Order__c/fields/Assigned_Setup_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Setup_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Setup Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaign_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>