News UAT/force-app/main/default/objects/Order__c/fields/Billing_Id__c.field-meta.xml
<CustomField>
    <fullName>Billing_Id__c</fullName>
    <label>Billing Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>