News UAT/force-app/main/default/objects/Order__c/fields/Briefing_Form__c.field-meta.xml
<CustomField>
    <fullName>Briefing_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Briefing Form</label>
    <referenceTo>Briefing_Form__c</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>