News UAT/force-app/main/default/objects/Order__c/fields/Briefing_Form_Status__c.field-meta.xml
<CustomField>
    <fullName>Briefing_Form_Status__c</fullName>
    <formula>Briefing_Form__r.Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Briefing Form Status</label>
    <type>Text</type>
</CustomField>