News UAT/force-app/main/default/objects/Order__c/fields/Campaign_Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The customer contact you are dealing with about this Campaign. The value in this field will default from the Opportunity, but you can edit it to select the most appropriate contact.</inlineHelpText>
    <label>Campaign Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaign Orders (Campaign Customer Contact)</relationshipLabel>
    <relationshipName>Campaign_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>