News UAT/force-app/main/default/objects/Order__c/fields/Campaign_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Manager_Email__c</fullName>
    <formula>Assigned_Campaign_Manager__r.Email</formula>
    <label>Campaign Manager Email</label>
    <type>Text</type>
</CustomField>