News UAT/force-app/main/default/objects/Order__c/fields/Campaign_Manager_Phone__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Manager_Phone__c</fullName>
    <formula>Assigned_Campaign_Manager__r.Phone</formula>
    <label>Campaign Manager Phone</label>
    <type>Text</type>
</CustomField>