News UAT/force-app/main/default/objects/Order__c/fields/Cancel_Campaign_Internal__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Campaign_Internal__c</fullName>
    <description>This internal field is used to track if all the product orders have been cancelled.</description>
    <formula>IF(Total_Number_Of_Product_Orders__c  =  Number_Of_Product_Orders_Cancelled__c,
   true, 
   false)</formula>
    <label>Cancel Campaign Internal</label>
    <type>Checkbox</type>
</CustomField>