News UAT/force-app/main/default/objects/Order__c/fields/Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date__c</fullName>
    <description>This field is supposed to be read only and mirrored from Payment record End Date. Re-labelled to End Date
NXRIII-311</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>