News UAT/force-app/main/default/objects/Order__c/fields/Cancellation_Reason_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason_Notes__c</fullName>
    <description>This field is supposed to be read only and mirrored from Payment record 
NXRIII-311</description>
    <label>Cancellation Reason Notes</label>
    <type>TextArea</type>
</CustomField>