News UAT/force-app/main/default/objects/Order__c/fields/Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Date__c</fullName>
    <description>This field is supposed to be read only and mirrored from Payment record 
NXRIII-311</description>
    <label>Cancelled Date</label>
    <type>Date</type>
</CustomField>