News UAT/force-app/main/default/objects/Order__c/fields/Change_Category__c.field-meta.xml
<CustomField>
    <fullName>Change_Category__c</fullName>
    <label>Change Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upsell</fullName>
            </value>
            <value>
                <fullName>Downsell</fullName>
            </value>
            <value>
                <fullName>Removing Product</fullName>
            </value>
            <value>
                <fullName>Adding new Products</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>