News UAT/force-app/main/default/objects/Order__c/fields/Change_Comment__c.field-meta.xml
<CustomField>
    <fullName>Change_Comment__c</fullName>
    <label>Change Comment</label>
    <type>TextArea</type>
</CustomField>