News UAT/force-app/main/default/objects/Order__c/fields/Checking_If_Today_Is_Internal_Review__c.field-meta.xml
<CustomField>
    <fullName>Checking_If_Today_Is_Internal_Review__c</fullName>
    <description>Internal field to check if today is internal campaign review date</description>
    <formula>IF 
(Internal_Campaign_Review_Date__c = TODAY(), 
true, 
false 
)</formula>
    <label>Checking If Today Is Internal Review</label>
    <type>Checkbox</type>
</CustomField>