News UAT/force-app/main/default/objects/Order__c/fields/Checking_If_Today_Is_Month_Anniversary__c.field-meta.xml
<CustomField>
    <fullName>Checking_If_Today_Is_Month_Anniversary__c</fullName>
    <description>Internal field to check if today is month anniversary of Campaign</description>
    <formula>IF
( Actual_Start_Date_Plus_1_Month__c = TODAY(), 
 true, 
 false
)</formula>
    <label>Checking If Today Is Month Anniversary</label>
    <type>Checkbox</type>
</CustomField>