News UAT/force-app/main/default/objects/Order__c/fields/Checking_If_Today_Is_Monthly_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Checking_If_Today_Is_Monthly_Review_Date__c</fullName>
    <description>Internal field to check if today is monthly review date</description>
    <formula>IF 
(Monthly_Dashboard_Review_Date__c = TODAY(), 
true, 
false 
)</formula>
    <label>Checking If Today Is Monthly Review Date</label>
    <type>Checkbox</type>
</CustomField>