News UAT/force-app/main/default/objects/Order__c/fields/Checking_If_Today_Is_Pause_Date__c.field-meta.xml
<CustomField>
    <fullName>Checking_If_Today_Is_Pause_Date__c</fullName>
    <formula>IF
(Pause_Start_Date__c =  TODAY(), 
 true, 
 false
)</formula>
    <label>Checking If Today Is Pause Date</label>
    <type>Checkbox</type>
</CustomField>