News UAT/force-app/main/default/objects/Order__c/fields/Checking_Monthly_Internal_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Checking_Monthly_Internal_Review_Date__c</fullName>
    <description>Internal field to check if today is monthly internal review date</description>
    <formula>IF 
( Monthly_Internal_Campaign_Review_Date__c = TODAY(), 
true, 
false 
)</formula>
    <label>Checking Monthly Internal Review Date</label>
    <type>Checkbox</type>
</CustomField>