News UAT/force-app/main/default/objects/Order__c/fields/Churn_Risk_Status__c.field-meta.xml
<CustomField>
    <fullName>Churn_Risk_Status__c</fullName>
    <label>Churn Risk Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Bad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>