News UAT/force-app/main/default/objects/Order__c/fields/Container_Access_Granted_Text__c.field-meta.xml
<CustomField>
    <fullName>Container_Access_Granted_Text__c</fullName>
    <formula>IF(ISPICKVAL(Placed_and_Access_Granted__c,&#39;Yes&#39;), &#39;Granted&#39;, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Container Access Granted Text</label>
    <type>Text</type>
</CustomField>