News UAT/force-app/main/default/objects/Order__c/fields/Container_Access_Requested_From_Customer__c.field-meta.xml
<CustomField>
    <fullName>Container_Access_Requested_From_Customer__c</fullName>
    <label>Container Access Requested From Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>