News UAT/force-app/main/default/objects/Order__c/fields/Container_Tag_Comments__c.field-meta.xml
<CustomField>
    <fullName>Container_Tag_Comments__c</fullName>
    <label>Container Tag Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>