News UAT/force-app/main/default/objects/Order__c/fields/Container_Tag_Id__c.field-meta.xml
<CustomField>
    <fullName>Container_Tag_Id__c</fullName>
    <label>Container Tag Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>