News UAT/force-app/main/default/objects/Order__c/fields/Container_Tag_Status__c.field-meta.xml
<CustomField>
    <fullName>Container_Tag_Status__c</fullName>
    <label>Container Tag Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Does Not Exist</fullName>
            </value>
            <value>
                <fullName>Exists - Have Access</fullName>
            </value>
            <value>
                <fullName>Exists - No Access</fullName>
            </value>
            <value>
                <fullName>N/A: Container Tag Not Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>