News UAT/force-app/main/default/objects/Order__c/fields/Container_Tag_Trigger_Internal__c.field-meta.xml
<CustomField>
    <fullName>Container_Tag_Trigger_Internal__c</fullName>
    <label>Container Tag Trigger Internal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>