News UAT/force-app/main/default/objects/Order__c/fields/CPQ_Payment_Needed__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Payment_Needed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>CPQ Payment Needed?</label>
    <type>Checkbox</type>
</CustomField>