News UAT/force-app/main/default/objects/Order__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <formula>Briefing_Form__r.CreatedBy.FirstName + &#39; &#39; + Briefing_Form__r.CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By</label>
    <type>Text</type>
</CustomField>