News UAT/force-app/main/default/objects/Order__c/fields/Current_Campaign_Performance_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Campaign_Performance_Review_Date__c</fullName>
    <label>Current Campaign Performance Review Date</label>
    <type>Date</type>
</CustomField>