News UAT/force-app/main/default/objects/Order__c/fields/Current_Customer_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Customer_Report_Date__c</fullName>
    <label>Current Customer Report Date</label>
    <type>Date</type>
</CustomField>