News UAT/force-app/main/default/objects/Order__c/fields/Current_Dashboard_Internal_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Dashboard_Internal_Review_Date__c</fullName>
    <label>Current Dashboard Internal Review Date</label>
    <type>Date</type>
</CustomField>