News UAT/force-app/main/default/objects/Order__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The contact that sales users have been communicating with about the opportunity. You cannot edit this contact on this Campaign Order.</inlineHelpText>
    <label>Opportunity Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaign Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>