News UAT/force-app/main/default/objects/Order__c/fields/Customer_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Name__c</fullName>
    <formula>Customer_Contact__r.FirstName &amp; &quot; &quot; &amp; Customer_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Contact Name</label>
    <type>Text</type>
</CustomField>