News UAT/force-app/main/default/objects/Order__c/fields/Customer_Preferred_Review_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Preferred_Review_Type__c</fullName>
    <defaultValue>&#39;Call&#39;</defaultValue>
    <label>Customer Preferred Review Type?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>Call &amp; Report</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>