News UAT/force-app/main/default/objects/Order__c/fields/Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tier__c</fullName>
    <defaultValue>&#39;Tier 3&#39;</defaultValue>
    <label>Customer Tier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>