News UAT/force-app/main/default/objects/Order__c/fields/Day_s_to_Go_Live__c.field-meta.xml
<CustomField>
    <fullName>Day_s_to_Go_Live__c</fullName>
    <formula>CASE(MOD(  TODAY() - DATE(1985,6,24),7), 
  0 , CASE( MOD( Proposed_Start_Date__c -  TODAY() ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Proposed_Start_Date__c -  TODAY() ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Proposed_Start_Date__c -  TODAY() ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Proposed_Start_Date__c -  TODAY() ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Proposed_Start_Date__c -  TODAY() ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Proposed_Start_Date__c -  TODAY() ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Proposed_Start_Date__c -  TODAY() ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Proposed_Start_Date__c -  TODAY() )/7)*5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Go Live</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>