News UAT/force-app/main/default/objects/Order__c/fields/Does_Container_Tag_Exist__c.field-meta.xml
<CustomField>
    <fullName>Does_Container_Tag_Exist__c</fullName>
    <label>Does Container Tag Exist?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>