News UAT/force-app/main/default/objects/Order__c/fields/Draft_Review_Passed__c.field-meta.xml
<CustomField>
    <fullName>Draft_Review_Passed__c</fullName>
    <label>Draft Review Passed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>