News UAT/force-app/main/default/objects/Order__c/fields/Duration_Type__c.field-meta.xml
<CustomField>
    <fullName>Duration_Type__c</fullName>
    <label>Duration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Not Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>