News UAT/force-app/main/default/objects/Order__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>Billing Period End Date</label>
    <type>Date</type>
</CustomField>