News UAT/force-app/main/default/objects/Order__c/fields/Evergreen__c.field-meta.xml
<CustomField>
    <fullName>Evergreen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Evergreen</label>
    <type>Checkbox</type>
</CustomField>