News UAT/force-app/main/default/objects/Order__c/fields/Evergreen_BuySheet__c.field-meta.xml
<CustomField>
    <fullName>Evergreen_BuySheet__c</fullName>
    <description>Translates Evergreen field to Buy Sheet required syntax. Set value to &quot;E&quot; if evergreen is True else value is &quot;&quot;.</description>
    <formula>IF(Evergreen__c = True, &#39;E&#39;, &#39;&#39;)</formula>
    <inlineHelpText>Translates Evergreen field to Buy Sheet required syntax.</inlineHelpText>
    <label>Evergreen_BuySheet</label>
    <type>Text</type>
</CustomField>