News UAT/force-app/main/default/objects/Order__c/fields/Flight_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Flight_Period_End_Date__c</fullName>
    <description>NXRIII-370 Request to introduce a flight date to capture Programmatic calculations</description>
    <inlineHelpText>To be used when different from the Billing Period End Date</inlineHelpText>
    <label>Flight Period End Date</label>
    <type>Date</type>
</CustomField>