News UAT/force-app/main/default/objects/Order__c/fields/Fulfiled_in_AdPoint__c.field-meta.xml
<CustomField>
    <fullName>Fulfiled_in_AdPoint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fulfiled in AdPoint?</label>
    <type>Checkbox</type>
</CustomField>