News UAT/force-app/main/default/objects/Order__c/fields/Has_Campaign_Run_For_Minimum_3_Months__c.field-meta.xml
<CustomField>
    <fullName>Has_Campaign_Run_For_Minimum_3_Months__c</fullName>
    <formula>IF( 
    TODAY() - Actual_Start_Date__c &lt; 90, 
    false, 
    true 
)</formula>
    <label>Has Campaign Run For Minimum 3 Months?</label>
    <type>Checkbox</type>
</CustomField>