News UAT/force-app/main/default/objects/Order__c/fields/Impressions_Factor__c.field-meta.xml
<CustomField>
    <fullName>Impressions_Factor__c</fullName>
    <label>Impressions Factor</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>