News UAT/force-app/main/default/objects/Order__c/fields/Industry_Code__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code__c</fullName>
    <label>Industry Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>