News UAT/force-app/main/default/objects/Order__c/fields/Industry_Code_Division__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code_Division__c</fullName>
    <formula>Industry_CodeCO__r.Division__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Code Division</label>
    <type>Text</type>
</CustomField>