News UAT/force-app/main/default/objects/Order__c/fields/Industry_Code_Subdivision__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code_Subdivision__c</fullName>
    <formula>Industry_CodeCO__r.Subdivision__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Code Subdivision</label>
    <type>Text</type>
</CustomField>