News UAT/force-app/main/default/objects/Order__c/fields/Industry_CodeCO__c.field-meta.xml
<CustomField>
    <fullName>Industry_CodeCO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>New industry code field used to populate value on the Campaign Order using CS_DataCreation and CS_OpportunityTriggerDelegate</description>
    <label>Industry Code</label>
    <referenceTo>Industry_Code__c</referenceTo>
    <relationshipLabel>Campaign Orders (Industry Code)</relationshipLabel>
    <relationshipName>Campaign_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>