News UAT/force-app/main/default/objects/Order__c/fields/Integration_User__c.field-meta.xml
<CustomField>
    <fullName>Integration_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integration User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaign_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>