News UAT/force-app/main/default/objects/Order__c/fields/Internal_Campaign_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Internal_Campaign_Review_Date__c</fullName>
    <formula>CASE(MOD( Actual_Start_Date_Plus_1_Month__c - DATE( 1900, 1, 7 ), 7 ),
      3, Actual_Start_Date_Plus_1_Month__c - 2 - 3,
      4, Actual_Start_Date_Plus_1_Month__c - 3,
      5, Actual_Start_Date_Plus_1_Month__c - 3,
      6, Actual_Start_Date_Plus_1_Month__c - 3,
      0, Actual_Start_Date_Plus_1_Month__c - 1 - 3,
      1, Actual_Start_Date_Plus_1_Month__c - 2 - 3,
      Actual_Start_Date_Plus_1_Month__c - 2 - 3
)</formula>
    <label>Internal Campaign Review Date</label>
    <type>Date</type>
</CustomField>