News UAT/force-app/main/default/objects/Order__c/fields/Is_Campaign_Order_Assigned_To_Me__c.field-meta.xml
<CustomField>
    <fullName>Is_Campaign_Order_Assigned_To_Me__c</fullName>
    <formula>IF(Assigned_Campaign_Manager__c  ==  $User.Id , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Campaign Order Assigned To Me</label>
    <type>Checkbox</type>
</CustomField>