News UAT/force-app/main/default/objects/Order__c/fields/Is_Container_Tag_Placed__c.field-meta.xml
<CustomField>
    <fullName>Is_Container_Tag_Placed__c</fullName>
    <label>Is Container Tag Placed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>