News UAT/force-app/main/default/objects/Order__c/fields/Is_Credit_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Credit_Required__c</fullName>
    <label>Is Credit Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>