News UAT/force-app/main/default/objects/Order__c/fields/Is_Next_Customer_Call_Report_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Is_Next_Customer_Call_Report_Review_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Next Customer Call/Report Review Date</label>
    <type>Checkbox</type>
</CustomField>