News UAT/force-app/main/default/objects/Order__c/fields/Is_Next_Customer_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Is_Next_Customer_Review_Date__c</fullName>
    <formula>TODAY() &gt;= Next_Customer_Review_Date__c
&amp;&amp;
TODAY() &lt;= Next_Customer_Call_Report_Review_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Next Customer Review Date?</label>
    <type>Checkbox</type>
</CustomField>